Creating Settings Activity Menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,15 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:id="@+id/fragment_container" >
+        android:layout_height="match_parent">
 
     </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_stories"
