--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -5,10 +5,10 @@
         <item android:id="@+id/settings"
             android:title="Settings"
             android:icon = "@drawable/ic_baseline_settings_24"
-            app:showAsAction="always" />
-        <item android:id="@+id/logout"
-            android:title="Logout"
-            android:icon = "@drawable/ic_baseline_logout_24"
+            app:showAsAction="ifRoom" />
+        <item android:id="@+id/add_story"
+            android:title="Add Story"
+            android:icon = "@drawable/ic_baseline_add_24"
             app:showAsAction="always" />
     </group>
 </menu>
