--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:transitionName="logo"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,6 +20,7 @@
         app:srcCompat="@drawable/ic_camera" />
 
     <TextView
+        android:alpha="0"
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -35,6 +37,7 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
 
     <TextView
+        android:alpha="0"
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,6 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:alpha="0"
         android:id="@+id/nameEditTextLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -67,6 +71,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:alpha="0"
         android:id="@+id/emailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -78,6 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:alpha="0"
         android:id="@+id/emailEditTextLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -98,6 +104,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:alpha="0"
         android:id="@+id/passwordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,6 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:alpha="0"
         android:id="@+id/passwordEditTextLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -131,6 +139,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:alpha="0"
         android:id="@+id/signupButton"
         android:layout_width="0dp"
         android:layout_height="64dp"
@@ -143,6 +152,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />
 
     <TextView
+        android:alpha="0"
         android:id="@+id/registerTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -159,6 +169,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signupButton" />
 
     <Button
+        android:alpha="0"
         android:id="@+id/btn_login"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
