--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:menuCategory="container">
         <item android:id="@+id/settings"
-            android:title="Settings"
+            android:title="@string/settings"
             android:icon = "@drawable/ic_baseline_settings_24"
             app:showAsAction="ifRoom" />
         <item android:id="@+id/add_story"
-            android:title="Add Story"
+            android:title="@string/add_story"
             android:icon = "@drawable/ic_baseline_add_24"
             app:showAsAction="always" />
     </group>
