--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:menuCategory="container">
+        <item android:id="@+id/maps"
+            android:title="@string/maps"
+            android:icon = "@drawable/ic_baseline_map_24"
+            app:showAsAction="ifRoom" />
         <item android:id="@+id/settings"
             android:title="@string/settings"
             android:icon = "@drawable/ic_baseline_settings_24"
