--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
-        tools:text="Timeout" />
+        tools:text="@string/request_timeout" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
